--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>drag</title>
+    <meta property="og:title" content="drag" />
+    <meta property="og:description" content="alallalal cats meow mrmrmwo sex" />
+    <meta property="og:image" content="https://cdn.discordapp.com/avatars/1105349571678318672/ecd76089be6de72a612abd0671a5ef28.webp?size=80" />
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
