--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>drag</title>
-    <meta property="og:title" content="drag" />
-    <meta property="og:description" content="alallalal cats meow mrmrmwo sex" />
-    <meta property="og:image" content="https://cdn.discordapp.com/avatars/1105349571678318672/ecd76089be6de72a612abd0671a5ef28.webp?size=80" />
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.0/color-thief.umd.js"></script>
 </head>
 
 <body>
@@ -23,7 +22,16 @@
     <div class="frame">
         <img class="profilepic">
         <p class="username scramble">drag</p>
+        <i class="devicon-javascript-plain"></i>
+        <i class="devicon-python-plain"></i>
+        <i class="devicon-csharp-plain"></i>
+        <i class="devicon-go-original-wordmark"></i>
+        <i class="devicon-html5-plain"></i>
+        <i class="devicon-css3-plain"></i>
+        <i class="devicon-lua-plain"></i>
         <p class="description scramble">alallalal cats meow mrmrmwo sex</p>
+
+        <button class="styledbutton" onclick="location.href='https://github.com/dragdotpng'"><i class="devicon-github-original bi"></i></button>
     </div>
     <script src="js/kys.js"></script>
 </body>
