--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.0/color-thief.umd.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 </head>
 
 <body>
@@ -31,7 +31,8 @@
         <i class="devicon-lua-plain"></i>
         <p class="description scramble">alallalal cats meow mrmrmwo sex</p>
 
-        <button class="styledbutton" onclick="location.href='https://github.com/dragdotpng'"><i class="devicon-github-original bi"></i></button>
+        <button class="styledbutton" onclick="location.href='https://github.com/dragdotpng'"><ion-icon name="logo-github" class="bi"></ion-icon></button>
+        <button class="styledbutton" onclick="location.href='https://soundcloud.com/dragzta'"><ion-icon name="logo-soundcloud" class="bi"></ion-icon></button>
     </div>
     <script src="js/kys.js"></script>
 </body>
