--- a/index.html
+++ b/index.html
@@ -1,39 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>drag</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-</head>
-
-<body>
-    <div class="discordframe">
-        <img class="profilepic" id="image">
-        <div class="text-container">
-            <p class="discordactivity" id="activity">aa</p>
-            <p class="discorddetails" id="details">aa</p>
-        </div>
-    </div>
-    <button class="clickme" id="playaudio">Click me</button>
-    <div class="frame">
-        <img class="profilepic">
-        <p class="username scramble">drag</p>
-        <i class="devicon-javascript-plain"></i>
-        <i class="devicon-python-plain"></i>
-        <i class="devicon-csharp-plain"></i>
-        <i class="devicon-go-original-wordmark"></i>
-        <i class="devicon-html5-plain"></i>
-        <i class="devicon-css3-plain"></i>
-        <i class="devicon-lua-plain"></i>
-        <p class="description scramble">alallalal cats meow mrmrmwo sex</p>
-
-        <button class="styledbutton" onclick="location.href='https://github.com/dragdotpng'"><ion-icon name="logo-github" class="bi"></ion-icon></button>
-        <button class="styledbutton" onclick="location.href='https://soundcloud.com/dragzta'"><ion-icon name="logo-soundcloud" class="bi"></ion-icon></button>
-    </div>
-    <script src="js/kys.js"></script>
-</body>
-</html>
+<!doctypehtml><html lang=en><meta charset=UTF-8><title>drag</title><meta content=drag property=og:title><meta content="alallalal cats meow mrmrmwo sex"property=og:description><meta content=https://c0.wallpaperflare.com/path/476/183/779/arches-architecture-black-and-white-building-27a762e47f96a2e1851820e9e5cadc9b.jpg property=og:image><meta content=https://dragzte.me property=og:url><meta content=website property=og:type><meta content=#2c2c2c name=theme-color><link href=css/style.css rel=stylesheet><link href=https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css rel=stylesheet><link href=https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css rel=stylesheet><script src=https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js></script><script src=https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js type=module></script><div class=discordframe><img class=profilepic id=image><div class=text-container><p class=discordactivity id=activity>aa<p class=discorddetails id=details>aa</div></div><button class=clickme id=playaudio>Click me</button><div class=frame><img class=profilepic><p class="scramble username">drag</p><i class=devicon-javascript-plain></i> <i class=devicon-python-plain></i> <i class=devicon-csharp-plain></i> <i class=devicon-go-original-wordmark></i> <i class=devicon-html5-plain></i> <i class=devicon-css3-plain></i> <i class=devicon-lua-plain></i><p class="scramble description">alallalal cats meow mrmrmwo sex</p><button class=styledbutton onclick='location.href="https://github.com/dragdotpng"'><ion-icon class=bi name=logo-github></ion-icon></button> <button class=styledbutton onclick='location.href="https://soundcloud.com/dragzta"'><ion-icon class=bi name=logo-soundcloud></ion-icon></button></div><button class=styledbutton onclick=mute() id=buttonvol><ion-icon class=bi name=volume-high-outline id=iconvol></ion-icon></button><script src=js/kys.js></script>
